--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/user.png">
+                <img src="user.png">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -127,7 +127,7 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="project-list">
             <div class="project">
-                <img src="images/project-1.jpg">
+                <img src="project-1.jpg">
                 <div class="layer">
                     <h3>Water Potability Prediction</h3>
                     <p>This helps us to predict whether the water is potable or not</p>
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="project">
-                <img src="images/project-2.jpg">
+                <img src="project-2.jpg">
                 <div class="layer">
                     <h3>Plant Disease Detection</h3>
                     <p>This helps us to detect the disease of the plant</p>
