--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                 <p><i class="fa-solid fa-paper-plane"></i>vyjayanthialla@gmail.com</p>
                 <p><i class="fa-solid fa-phone"></i>9292700804</p>
                 <div class="social-icons">
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/vijju_5689/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/alla-vyjayanthi-741b662b4"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="My CV.pdf" download class="button btn2">Download CV</a>
             </div>
