--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div id="header">
         <div class="container">
         <nav>
-            <img src="logo.png" class="logo">
+            <!---------<img src="logo.png" class="logo">------->
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#internship">Internships</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#portfolio">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 
@@ -221,3 +221,4 @@
   </script>
 </body>
 </html>
+
